# otaripper

./: CHANGELOG.md  Cargo.toml  README.md  TECHNICAL.md  build.ps1  build.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: aur.yml  build-release.yaml  crate.yml  manual-build.yml  winget.yml
src/: lib.rs  payload.rs  remote.rs
src/cmd/: arbscan.rs  extractor.rs  metadata.rs  mod.rs  simd.rs
